# football-matches-dataset

./: .gitignore  Makefile  README.md  generate_dataset.py  intl.py  parse.py  parse_old.py  pyproject.toml  reqrite.py  teams.csv  unique_names.py
data/international/: abcs-tournament.csv  afc-asian-cup-qualification.csv  afc-asian-cup.csv  afc-challenge-cup-qualification.csv  afc-challenge-cup.csv  aff-championship-qualification.csv  aff-championship.csv  africa-cup-of-nations-qualification.csv  african-cup-of-nations-qualification.csv  african-cup-of-nations.csv  african-friendship-games.csv  afro-asian-games.csv  all-african-games.csv  amílcar-cabral-cup.csv  arab-cup-qualification.csv  arab-cup.csv  asian-games.csv  atlantic-cup.csv  atlantic-heritage-cup.csv  balkan-cup.csv  baltic-cup.csv  beijing-international-friendship-tournament.csv  benedikt-fontana-cup.csv  bolivarian-games.csv  brazil-independence-cup.csv  british-home-championship.csv  cafa-nations-cup.csv  cccf-championship.csv  cecafa-cup.csv  central-american-and-caribbean-games.csv  central-european-international-cup.csv  cfu-caribbean-cup-qualification.csv  cfu-caribbean-cup.csv  concacaf-championship-qualification.csv  concacaf-championship.csv  concacaf-nations-league-qualification.csv  concacaf-nations-league.csv  confederations-cup.csv  (+138 more)
parsers/: __init__.py  format1_parser.py  format2_parser.py  format3_parser.py  format4_parser.py  format5_parser.py  format6_parser.py  intercontinental_parser.py  libertadores_parser.py  parser_copa_brasil.py  parser_serie_a_1.py  parser_serie_a_2.py
(+342 files in other folders)
