[tool.poetry]
name = "Football-Matches-Dataset"
version = "0.1.0"
description = ""
authors = ["Rodrigo <rodrigo4zevedo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"